--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,6 +1,52 @@
 <html>
-    <body>
-        <p>Hello !</p>
-        <p>It works..</p>
-    </body>
+
+<head>
+    <title>Django Girls blog</title>
+</head>
+
+<body>
+    <div>
+        <h1><a href="/">Plu's Blog</a></h1>
+    </div>
+
+    <div>
+        <p>published: 03 june 2019, monday 11:47</p>
+        <h2><a href="">My first post</a></h2>
+        <p> Text. </p>
+    </div>
+
+    <div>
+        <p>published: 03 june 2019, monday 11:47</p>
+        <h2><a href="">My second post</a></h2>
+        <p> Text.</p>
+    </div>
+</body>
+
 </html>
+
+Customize your template
+You can now have a little fun and try to customize your template! Here are a few useful tags for that:
+
+<!-- extra info for editoring person:
+
+    <h1>A heading</h1> for your most important heading
+
+    <h2>A sub-heading</h2> for a heading at the next level
+
+    <h3>A sub-sub-heading</h3> …and so on, up to <h6>
+
+    <p>A paragraph of text</p>
+
+    <em>text</em> emphasizes your text
+
+    <strong>text</strong> strongly emphasizes your text
+
+    <br> goes to another line (you can't put anything inside br and there's no closing tag)
+
+    <a href="https://djangogirls.org">link</a> creates a link
+
+    <ul><li>first item</li><li>second item</li></ul> makes a list, just like this one!
+
+    <div></div> defines a section of the page 
+
+    -->
