creating template tags for django in html file, display post list template

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,17 +9,18 @@
         <h1><a href="/">Plu's Blog</a></h1>
     </div>
 
-    <div>
+    {{ posts }}
         <p>published: 03 june 2019, monday 11:47</p>
         <h2><a href="">My first post</a></h2>
         <p> Text. </p>
-    </div>
+    {{ posts }}
 
-    <div>
+    {{ posts }}
         <p>published: 03 june 2019, monday 11:47</p>
         <h2><a href="">My second post</a></h2>
         <p> Text.</p>
-    </div>
+    {{ posts }}
+    
 </body>
 
 </html>
