starting again, mistake in queryset

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,32 +1,27 @@
-<html>
 
-<head>
-    <title> Plu's blog </title>
-</head>
-
-<body>
-    <div>
-        <h1><a href="/">Plu's Blog</a></h1>
-    </div>
-
-    {{ posts }}
-        <p>published: 03 june 2019, monday 11:47</p>
-        <h2><a href="">My first post</a></h2>
-        <p> Text. </p>
-    {{ posts }}
-
-    {{ posts }}
-        <p>published: 03 june 2019, monday 11:47</p>
-        <h2><a href="">My second post</a></h2>
-        <p> Text.</p>
-    {{ posts }}
+    <html>
+        <head>
+            <title>Plu's blog</title>
+        </head>
+        <body>
+            <div>
+                <h1><a href="/">Plu's Blog</a></h1>
+            </div>
     
-</body>
+            <div>
+                <p>published: 03 may 2019</p>
+                <h2><a href="">My first post</a></h2>
+                <p>Text</p>
+            </div>
+    
+            <div>
+                <p>published: 03 may 2019</p>
+                <h2><a href="">My second post</a></h2>
+                <p>Text</p>
+            </div>
+        </body>
+    </html>
 
-</html>
-
-Customize your template
-You can now have a little fun and try to customize your template! Here are a few useful tags for that:
 
 <!-- extra info for editoring person:
 
