changing content template tags in html attempt 1

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,15 +9,7 @@
             </div>
     
             <div>
-                <p>published: 03 may 2019</p>
-                <h2><a href="">My first post</a></h2>
-                <p>Text</p>
-            </div>
-    
-            <div>
-                <p>published: 03 may 2019</p>
-                <h2><a href="">My second post</a></h2>
-                <p>Text</p>
+                {{ posts }}
             </div>
         </body>
     </html>
