--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -11,8 +11,19 @@
 
     <div>
         {% for post in posts %}
-        {{ post }}
+        <div>
+            <p>published: {{ post.published_date }}</p>
+            <h2><a href="">{{ post.title }}</a></h2>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
         {% endfor %}
+
+
+        <!-- wrong
+            pre test
+            {% for post in posts %}
+        {{ post }}
+        {% endfor %} -->
     </div>
 </body>
 
